Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65595

QWebEngineView loses focus on window minimize -> restore

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.11.0 Beta 4
    • 5.10.0
    • WebEngine
    • None
    • Linux

      QWebEngineView will not restore focus when minimizing window and then restoring it. Instead, next widget in focus chain will be focused.

      1. Click inside web view
      2. Minimize app window
      3. Restore window
      4. Web view is not focused

      Can be reproduced eg. in simplebrowser.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            nowrep David Rosca
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes