Fix focus after hide

We are not supposed to set the QWidget as non-visible, this removes the
widget from layout and focus, and no other QWidget does that on minimize,
instead just set qquickitem as non visible.

Task-number: QTBUG-65595
Change-Id: Iefb52243229d11879a7a38c641084c266eef2207
Reviewed-by: Michael Brüning <michael.bruning@qt.io>